<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="80dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_us"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/textview_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complaint_lbl"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/edt_complaint"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edt_complaint"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/hint_complaint_lbl"
        android:textSize="15sp"
        android:gravity="start"
        android:padding="5dp"
        android:text="New Feedback!"
        android:textColor="@color/black"
        android:background="@drawable/btn_bg_transparent_rounded_rect"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:drawableRight="@android:drawable/sym_action_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <TextView
        android:id="@+id/textview_customer_care_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_care_no"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/button_first"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>